@@ -1,5 +1,11 @@
 2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 
 
+	* unichrome/via_driver.c: (VIAEnterVT):
+
+	Blank and clear screen when entering VT.
+	
+2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 
+
 	* unichrome/via_accel.c: (viaAccelDMADownload),
 	(viaExaDownloadFromScreen), (viaInitExa):
 
